<resources>
    <string name="app_name">CovidStats</string>
    <string name="country">Country</string>
    <string name="total_cases">Total cases</string>
    <string name="new_cases">New cases</string>
    <string name="total_deaths">Total deaths</string>
    <string name="new_deaths">New deaths</string>
    <string name="new_recovered_detail">New recovered:</string>
    <string name="recovered_detail">Recovered:</string>
    <string name="total_confirmed_detail">Total confirmed:</string>
    <string name="new_cases_detail">New cases:</string>
    <string name="total_deaths_detail">Total deaths:</string>
    <string name="new_deaths_detail">New deaths:</string>
    <string name="active_cases">Active cases</string>
    <string name="total_confirmed">Total confirmed</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
</resources>
