<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".view.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="285dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="26dp"
                    android:gravity="center_horizontal"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_total_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="start"
                    android:text="@string/total_confirmed_detail"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/total_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="25dp"
                    android:gravity="end"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_new_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="start"
                    android:text="@string/new_cases_detail"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/new_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:gravity="end"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_total_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="start"
                    android:text="@string/total_deaths_detail"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/total_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:gravity="right"
                    android:textSize="25sp"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_new_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="start"
                    android:text="@string/new_deaths_detail"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/new_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:gravity="right"
                    android:textSize="25sp"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_total_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="start"
                    android:text="@string/recovered_detail"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/total_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:gravity="end"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/label_new_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:gravity="start"
                    android:text="@string/new_recovered_detail"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/new_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:gravity="end"
                    android:textSize="25sp" />
            </TableRow>


        </TableLayout>

        <TextView
            android:id="@+id/graph1_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/total_confirmed"
            android:textSize="25sp"
            android:visibility="gone" />

        <com.example.student.covidstats.view.GraphView
            android:id="@+id/graph1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/graph2_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/active_cases"
            android:textSize="25sp"
            android:visibility="gone" />


        <com.example.student.covidstats.view.GraphView
            android:id="@+id/graph2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/graph3_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/total_deaths"
            android:textSize="25sp"
            android:visibility="gone" />


        <com.example.student.covidstats.view.GraphView
            android:id="@+id/graph3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/last_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>
